<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/coverpage" />

        <EditText
            android:id="@+id/name_field"
            style="@style/name_field"
            android:fontFamily="@font/arsenal_italic" />

        <!-- QUESTION 1 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/typeface" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage1" />

        <RadioGroup
            android:id="@+id/question1_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1a1" />

            <RadioButton
                style="@style/answer"
                android:id="@+id/question1a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1a2" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1a3" />

        </RadioGroup>

        <View style="@style/divider" />

        <!-- QUESTION 2 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/question2" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage2" />

        <RadioGroup
            android:id="@+id/question2_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2a1" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2a2" />

            <RadioButton
                style="@style/answer"
                android:id="@+id/question2a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2a3" />

        </RadioGroup>

        <View style="@style/divider" />

        <!-- QUESTION 3 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/question3" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage3" />

        <RadioGroup
            android:id="@+id/question3_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:id="@+id/question3a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3" />

        </RadioGroup>

        <View style="@style/divider" />

        <!-- QUESTION 4 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/question45" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage4" />

        <RadioGroup
            android:id="@+id/question4_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:id="@+id/question4a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3" />

        </RadioGroup>

        <View style="@style/divider" />

        <!-- QUESTION 5 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/as_de" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage5" />

        <RadioGroup
            android:id="@+id/question5_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:id="@+id/question5a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3" />

        </RadioGroup>

        <View style="@style/divider" />


        <!-- QUESTION 6 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/kerning" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage6" />

        <EditText
            android:id="@+id/question6answer"
            style="@style/hint"
            android:fontFamily="@font/arsenal_regular"
            android:hint="@string/hint" />


        <View style="@style/divider" />

        <!-- QUESTION 7 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/stem" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage7" />

        <CheckBox
            style="@style/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice1" />

        <CheckBox
            style="@style/answer"
            android:id="@+id/question7a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice2" />

        <CheckBox
            style="@style/answer"
            android:id="@+id/question7a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice3" />

        <CheckBox
            style="@style/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice4" />

        <View style="@style/divider" />


        <!-- QUESTION 8 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="600px"
            android:src="@drawable/cap_height" />

        <TextView
            style="@style/questionpage"
            android:fontFamily="@font/arsenal_regular"
            android:text="@string/questionpage8" />

        <RadioGroup
            android:id="@+id/question8_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/answer"
                android:id="@+id/question8a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1" />

            <RadioButton
                style="@style/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2" />
        </RadioGroup>


        <View style="@style/divider" />

        <Button
            android:id="@+id/submit_btn"
            style="@style/submit_btn"
            android:onClick="submitAnswers" />


    </LinearLayout>



</ScrollView>
